# Owner-Governed-Asset-Ledger

./: .gitignore  README.md
docs/ogal-cli/: ogal-cli-public-guide.md
docs/ogal-protocol/: collection-authority-rotation.md  mint-debugging-runbook.md  mint-signature-changes.md  mint_object_nft-instructions.md  namespace-directory.md  ogal-auditability-and-access.md  ogal-builds-on-metaplex.md  ogal-collection-sizing-guide.md  ogal-namespace-migration.md  ogal-shared-deployment-guide.md  ogal-update-manifest-instruction.md
owner-governed-asset-ledger/: Anchor.toml  Cargo.toml  README.md  package-lock.json  tsconfig.json
owner-governed-asset-ledger/programs/owner_governed_asset_ledger/: Cargo.toml
owner-governed-asset-ledger/programs/owner_governed_asset_ledger/src/: lib.rs
owner-governed-asset-ledger/programs/owner_governed_asset_ledger/tests/: mint.rs
owner-governed-asset-ledger/scripts/: initialize.js  inspect-collection.js  migrate-namespace.js  mint-object.js  rotate-collection-authority.js  set-authority.js  set-paused.js  update-manifest.js  utils.js
owner-governed-asset-ledger/scripts/__tests__/: manifest-utils.test.js
owner-governed-asset-ledger/scripts/metaplex/: create-collection.ts
