[workspace]
members = [
    "programs/owner_governed_asset_ledger"
]
resolver = "2"

[workspace.dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.1" }
mpl-token-metadata = { version = "5.1.1" }

[patch.crates-io]
anchor-syn = { path = "vendor/anchor-syn" }
base64ct = { git = "https://github.com/RustCrypto/formats.git", package = "base64ct", tag = "base64ct/v1.7.1" }

[profile.release]
overflow-checks = true
