[package]
name = "owner-governed-asset-ledger"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "owner_governed_asset_ledger"

[features]
default = []
no-entrypoint = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
mpl-token-metadata = { workspace = true }
bytemuck = { version = "1.14", features = ["derive"] }
borsh = "0.10.4"
spl-discriminator = "0.2.5"
spl-type-length-value = "0.4.6"

[dev-dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
mpl-token-metadata = { workspace = true }
borsh = "0.10.4"
once_cell = "1.19.0"
solana-program-test = "1.18.26"
solana-sdk = "1.18.26"
spl-associated-token-account = { version = "3.0.2", features = ["no-entrypoint"] }
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
tokio = { version = "1.37", features = ["macros", "rt-multi-thread"] }
serial_test = "2.0"
